# gonza-x2

./: .geminiignore  .gitignore  README.md  optimize_assets.py
backend/: .gitignore  convert_sqlite_to_sql.py  main.py  package.json  patch_inventory_history.py  pyproject.toml  requirements.txt  seed_db.py  test_templates_api.py  vercel.json  vercel_app.py
backend/activities/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/activities/logic/: aggregator.py  cache_manager.py  cursor.py  merger.py
backend/activities/migrations/: 0001_initial.py  0002_activityhistory_profile_id_and_more.py  (+1 more)
backend/appointments/: models.py  views.py
backend/core/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
backend/core/logic/: number_generator.py
backend/core_app/: admin.py  middleware.py  models.py  pdf_utils.py  serializers.py  urls.py  views.py
backend/customers/: admin.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/finance/: admin.py  filters.py  models.py  pesapal_utils.py  serializers.py  signals.py  urls.py  views.py
backend/inventory/: admin.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/messaging/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/sales/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/: admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
(+208 files in other folders)
